# GBoy

./: CMakeLists.txt
cmake/: FindCheck.cmake
include/: bus.h  cartridge.h  common.h  cpu.h  cpu_instruct.h  debugger.h  dma.h  gboy.h  interface.h  interrupt.h  joypad.h  lcd.h  ppu.h  ppu_state_machine.h  ram.h  timer.h
lib/: CMakeLists.txt  bus.c  cart.c  cartridge.c  cpu.c  cpu_fetch.c  cpu_instruct.c  cpu_process.c  cpu_util.c  debugger.c  dma.c  gboy.c  interface.c  interrupt.c  io.c  joypad.c  lcd.c  ppu.c  ppu_fifo.c  ppu_state_machine.c  ram.c  stack.c  timer.c
rom/: LOZ.gb.battery  oam_bug.gb.battery
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_gboy.c
